# socratic-tutor

./: .gitignore  Dockerfile  README.md  inference.py  models.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  student_simulator.py
tasks/: task_definitions.py
