[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic-tutor-env"
version = "1.0.0"
description = "An OpenEnv environment for training AI teacher agents using the Socratic method"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arjun", email = "arjun@example.com"}
]
keywords = [
    "openenv",
    "education",
    "dialogue",
    "llm",
    "socratic-method",
    "reinforcement-learning",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education"
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "httpx==0.27.0",
    "requests==2.31.0",
    "openai==1.35.0",
    "openenv>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
socratic-tutor = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/arjunjuneja/socratic-tutor"
Repository = "https://github.com/arjunjuneja/socratic-tutor"
Documentation = "https://huggingface.co/spaces/arjunjuneja/socratic-tutor"

[tool.setuptools]
packages = ["server", "tasks"]

[tool.setuptools.package-data]
server = ["*.py"]
tasks = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
